# modeling-motion-particle

./: CMakeLists.txt  Makefile  main.c
drawer/: data.txt  draw.py
includes/: arr.h  phisics.h  until.h
lib/: arr.c  until.c  vec.c
sourse/: 1_phi.txt  test.txt
